samples/_failures_safe/1761188667_3d7d15_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bf9018d4.c: In function ‘main’:
./samples/SAFE/__tmp_bf9018d4.c:137:31: error: missing terminating " character
  137 |     operation = get_valid_int("Enter choice (1-
      |                               ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_bf9018d4.c:137:5: error: expected expression at end of input
  137 |     operation = get_valid_int("Enter choice (1-
      |     ^~~~~~~~~
./samples/SAFE/__tmp_bf9018d4.c:137:17: error: too few arguments to function ‘get_valid_int’
  137 |     operation = get_valid_int("Enter choice (1-
      |                 ^~~~~~~~~~~~~
./samples/SAFE/__tmp_bf9018d4.c:80:5: note: declared here
   80 | int get_valid_int(const char* prompt, int min_val, int max_val) {
      |     ^~~~~~~~~~~~~
./samples/SAFE/__tmp_bf9018d4.c:137:5: error: expected declaration or statement at end of input
  137 |     operation = get_valid_int("Enter choice (1-
      |     ^~~~~~~~~
